Update auf Java 11 - inkl. Update auf Spring Boot 2.3.3 - inkl. skip repackaging für fetenarchiv-daten - Update bezüglich spring-boot-maven-plugin configuration - Upgrade des mockito-plugin für das wro4j-maven-plugin - (Re-)Integration des maven-surefire-plugins Version 2.22.2 (inkl. Junit5-support) im parent-pom